--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs": "documentation build --config etc/documentation.yml --github true --output docs --format html src/**",
     "serve-docs": "documentation serve --config etc/documentation.yml --github true --output docs --format html src/**",
     "test": "mocha",
+    "test-s": "mocha --grep \"write and read in chunks\"",
     "test-coverage": "istanbul cover _mocha --report lcovonly -- -R spec",
     "publish-coverage": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "pre-pack": "yarn run lint",
